tests/fsharp/typecheck/sigs/neg_byref_18.bsl

neg_byref_18.fs(2,38,2,47): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.
