tests/fsharp/typecheck/sigs/neg_byref_18.fs
module Test
let f x = let mutable y = "hello" in hash (&y);;
